# ICP3038

./: README.md  includeLibraries.h
Labs/11-Pyramid-blending/: README.md
Labs/12-Motion-detection-and-tracking/: .gitignore  CMakeLists.txt  README.md
Labs/13-Panorama_stitching/: .gitignore  README.md
Labs/Lab-01/: CMakeLists.txt  README.md  lab2-1.c
Labs/Lab-01/answers/: CMakeLists.txt
Labs/Lab-01/answers/src/: task1-solution1.cpp  task1-solution2.cpp  task1-solution3.cpp  task2.cpp  task3.cpp  task4.cpp
Labs/Lab-01/doc/: ICP3038_Lab_01.tex  lab01.tex
Labs/Lab-01/src/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
Labs/Lab-02/: CMakeLists.txt  README.md
Labs/Lab-02.old/: CMakeLists.txt
Labs/Lab-02.old/doc/: ICP3038_Lab_02.tex
Labs/Lab-02.old/include/: Integer.h
Labs/Lab-02.old/src/: TestStringInverter.cpp
Labs/Lab-02/doc/: ICP3038_Lab_02.tex  lab02.tex
Labs/Lab-02/include/: Integer.h
Labs/Lab-02/src/: Integer.cpp  TestInteger.cpp
Labs/Lab-03/: CMakeLists.txt  README.md  lab2-1.cxx  lab2-2.c
Labs/Lab-03.old/doc/: ICP3038_Lab_03.tex  lab03.tex
Labs/Lab-03.old/include/: utils.h  utils.inl
Labs/Lab-03.old/src/: TestVector.cpp
Labs/Lab-03/doc/: ICP3038_Lab_03.tex  lab-03.kilepr  lab03.tex
Labs/Lab-03/include/: utils.h  utils.inl
Labs/Lab-03/src/: CMakeLists.txt  TestUtils.cpp  TestVector.cpp
Labs/Lab-04/: CMakeLists.txt  README.md  celsius2fahrenheit.cxx  lab2-2.cxx  lab2-30.cxx  lab3-1.cxx  lab3-2.cxx  lab3-3.cxx  lab3-4.cxx  lab3-5.cxx
Labs/Lab-04-Comparing_1D_arrays/: CMakeLists.txt
Labs/Lab-04-Comparing_1D_arrays/data/: y_negative.mat  y_noise.mat
Labs/Lab-04-Comparing_1D_arrays/doc/: ICP3038_Lab_04.tex
Labs/Lab-04-Comparing_1D_arrays/include/: MyVector.h
Labs/Lab-04-Comparing_1D_arrays/src/: MyVector.cpp  test_my_vector.cpp
Labs/Lab-04-Image_statistics/data/: y_quadriple.mat
Labs/Lab-04-Image_statistics/doc/: ICP3038_Lab_04.tex
Labs/Lab-04-Image_statistics/include/: MyVector.h
Labs/Lab-04-Image_statistics/octave/: createData.m  curves.tex  (+2 more)
Labs/Lab-04/data/: y.mat
Labs/Lab-04/doc/: ICP3038_Lab_04.tex
Labs/Lab-04/include/: MyVector.h
Labs/Lab-04/octave/: createData.m  y_hist.tex
Labs/Lab-04/src/: MyVector.cpp  TestStringInverter.cxx  test_my_vector.cpp
Labs/Lab-05-Comparing_arrays/: numerical_inaccuracy.cpp
Labs/Lab-05-an_image_class/: README.md
Labs/Lab-06-Introduction_to_OpenCV/src/: CMakeLists.txt  gaussianFilter.cxx  meanFilter.cxx  medianFilter.cxx
Labs/Lab-06-point-operators/: CMakeLists.txt  README.md
Labs/Lab-07-Blending-segmentation/: CMakeLists.txt  CMakeLists.txt~  README.md
Labs/Lab-07-Edge_detection_in_OpenCV/src/: CMakeLists.txt  edgeDetection1.cxx
Labs/Lab-07-Introduction_to_OpenCV/src/: CMakeLists.txt  displayImage.cxx  gaussianFilter.cxx  logScale.cxx  meanFilter.cxx  medianFilter.cxx  rgb2grey.cxx
Labs/Lab-08-Image-comparison_and_convolution/: README.md
Labs/Lab-08-Video from a file or a webcam/src/: CMakeLists.txt  videoFromFile.cxx
Labs/Lab-09-Grandient_magnitude-and-Sharpening/: README.md
Labs/Lab-09-Video-from-a-file-or-a-webcam/: CMakeLists.txt  README.md
Labs/Lab-10-Background_subtraction/: README.md
Labs/Lab-10-Introduction_to_OpenCV/: README.md
Labs/Tutorial-text-files/: CMakeLists.txt
Labs/Tutorial-text-files/src/: readDataFromASCIIFile.cpp  readDataFromConsole.cpp  writeDataToASCIIFile.cpp  writeDataToConsole.cpp
Lectures/12-feature-detection/: .gitignore
Lectures/15-object-recognition/: environment.yml
Lectures/Chapter 02 -- Introduction to C++/: CMakeLists.txt  example2.cpp  example3.cpp  example5.cpp  example6.c  example7.cpp  example8.cpp  example9.cpp
Lectures/Chapter 02 -- Introduction to C++/example1/: CMakeLists.txt  Makefile.unix  compile.sh
Lectures/Chapter 02 -- Introduction to C++/example1/include/: Window.h
Lectures/Chapter 02 -- Introduction to C++/example1/src/: Window.cpp  main.cpp
Lectures/Chapter 03 -- Object Oriented Programming in C++/: CMakeLists.txt  MyClass.cpp  MyClass.h  Vector1.cpp  Vector1.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  example1.h  example1a.cpp  example1b.cpp  example1c.cpp  example1d.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp
Lectures/Chapter 04 -- More Advanced Programming in C++/: CMakeLists.txt
Lectures/Chapter 04 -- More Advanced Programming in C++/src/: example01.h  example04.cpp  example04.h  example05.cpp  example05.h  example09.cpp  example09.h  example1.cpp  example10.cpp  example10.h  example11.cpp  example11.h  example13a.cpp  example13b.cpp  example14.cpp  example15.cpp  example16a.cpp  example16b.cpp  example17.cpp  example18.cpp  example19.cpp  example2.cpp  example20.cpp  example21.cpp  example22.cpp  example3.cpp  example4.cpp  example4.h  example8.cpp  example8.h
Lectures/Chapter 04 -- More Advanced Programming in C++/src/example06/: Circle.h  Rectangle.cpp  Rectangle.h  Square.cpp
Lectures/Chapter 04 -- More Advanced Programming in C++/src/example07/: Rectangle.h  Shape.h  Square.cpp  Square.h  main.cpp
Lectures/Chapter 04 -- More Advanced Programming in C++/src/example6/: Circle.cpp  Square.h  main.cpp
Lectures/Chapter 04 -- More Advanced Programming in C++/src/example7/: Circle.cpp  Circle.h  Rectangle.cpp  Shape.cpp
Lectures/Chapter 05 -- Introductino to image processing/: CMakeLists.txt  GreyscaleImage.cpp  GreyscaleImage.h  TestGreyscaleImage.cpp
Lectures/Chapter 06 -- Point operators and linear filtering/: 1D_function.eps  2D_function2.eps  createVideo.m  createVideo.sh
Lectures/Chapter 07 -- Filtering and mathematical morphology/: gauss.plt  gauss1D.eps  gauss2D.eps  lena-std.mat  meanFilterTest.m  randomisePicture.m
Lectures/Chapter 08 -- Edge detection/: curve.eps  plot.plt
Lectures/Chapter 09 -- Fourier transform/: illustration1.m  illustration2.m  illustration3.m  illustration4.m  illustration5.m  illustration6.m  illustration7.m
Lectures/Chapter 13 -- Edge and line detection/: CMakeLists.txt  README.md  hough_transform.cxx  sobel_image.cxx
(+119 files in other folders)
