PROJECT(MotionDetection)

cmake_minimum_required(VERSION 3.2)

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

IF (WIN32)
    SET (CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "D:\\opencv\\build")
    SET (CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "C:\\opencv\\build")
ENDIF (WIN32)

FIND_PACKAGE(OpenCV REQUIRED)


ADD_EXECUTABLE (MotionDetection MotionDetection.cxx)
TARGET_INCLUDE_DIRECTORIES (MotionDetection PUBLIC ${OpenCV_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES (MotionDetection   ${OpenCV_LIBS})

FILE (COPY "${CMAKE_CURRENT_SOURCE_DIR}/one_moving_object.avi"
      DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/")

FILE (COPY "${CMAKE_CURRENT_SOURCE_DIR}/change_of_lighting_conditions.avi"
      DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/")

FILE (COPY "${CMAKE_CURRENT_SOURCE_DIR}/two_moving_objects.avi"
      DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/")
