CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

# set the project name
PROJECT (ICP3038-lab3)

# add the executable
ADD_EXECUTABLE (lab2-1-C lab2-1.c)
ADD_EXECUTABLE (lab2-1-CXX lab2-1.cxx)
ADD_EXECUTABLE (lab2-2-C lab2-2.c)
ADD_EXECUTABLE (lab2-2-CXX lab2-2.cxx)
ADD_EXECUTABLE (lab2-3 lab2-3.cxx)

ADD_EXECUTABLE (lab3-1 lab3-1.cxx)
ADD_EXECUTABLE (lab3-2 lab3-2.cxx)
#ADD_EXECUTABLE (lab3-3 lab3-3.cxx)
