cmake_minimum_required(VERSION 2.6)

project(ICP3038--Lab04)


add_executable(writeDataToConsole src/writeDataToConsole.cpp)
add_executable(writeDataToASCIIFile src/writeDataToASCIIFile.cpp)
add_executable(readDataFromConsole src/readDataFromConsole.cpp)
add_executable(readDataFromASCIIFile src/readDataFromASCIIFile.cpp)
