project(ICP3038-Lecture1)

add_directories(example1)

add_executable(example2 example2.cxx)
add_executable(example3 example3.cxx)
add_executable(example4 example4.cxx)
add_executable(example5 example5.cxx)
add_executable(example6 example6.c)
add_executable(example7 example7.cxx)
add_executable(example8 example8.cxx)
add_executable(example9 example9.cxx)
