add_executable(example1a example1.h example1a.cpp)
add_executable(example1b example1.h example1b.cpp)
add_executable(example1c example1.h example1c.cpp)
add_executable(example1d MyClass.h MyClass.cpp example1d.cpp)
add_executable(example2 Vector1.h Vector1.cpp example2.cpp)
add_executable(example3 Vector1.h Vector1.cpp example3.cpp)
add_executable(example4 Vector2.h Vector2.cpp example4.cpp)
add_executable(example5 example5.cpp)
add_executable(example6 example6.cpp)
add_executable(example7 Vector3.h Vector3.cpp example7.cpp)
add_executable(example8 Vector4.h Vector4.cpp example8.cpp)
