cmake_minimum_required(VERSION 2.6)

project(ICP3038--Lab01--answers)

add_executable(Task1-solution1 src/task1-solution1.cpp)
add_executable(Task1-solution2 src/task1-solution2.cpp)
add_executable(Task1-solution3 src/task1-solution3.cpp)
add_executable(Task2 src/task2.cpp)
add_executable(Task3 src/task3.cpp)
#add_executable(Task4 src/task4.cpp)
